--- a/readium/lcp/r2-lcp-wrapper/build.gradle
+++ b/readium/lcp/r2-lcp-wrapper/build.gradle
@@ -28,8 +28,9 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-//    implementation project(':r2-shared-kotlin')
-//    implementation project(':r2-lcp-kotlin')
+    // TODO this needs more work to implement with jitpack dependenies
+    implementation project(':r2-shared')
+    implementation project(':r2-lcp')
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
