--- a/readium/lcp/r2-lcp-wrapper/build.gradle
+++ b/readium/lcp/r2-lcp-wrapper/build.gradle
@@ -27,10 +27,14 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    
+    implementation 'com.github.edrlab:r2-shared-kotlin:0.1.0'
+//    implementation 'com.github.edrlab:r2-lcp-kotlin:0.1.0'
 
-    // TODO this needs more work to implement with jitpack dependenies
-    implementation project(':r2-shared')
-    implementation project(':r2-lcp')
+
+//    implementation project(':r2-shared')
+//    implementation project(':r2-lcp')
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
