repo move updates

--- a/readium/lcp/r2-lcp-wrapper/build.gradle
+++ b/readium/lcp/r2-lcp-wrapper/build.gradle
@@ -27,11 +27,13 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    
-    implementation 'com.github.edrlab:r2-shared-kotlin:0.1.0'
-//    implementation 'com.github.edrlab:r2-lcp-kotlin:0.1.0'
 
+//    uncomment this line to use with jitpack
+    implementation 'com.github.readium:r2-shared-kotlin:0.1.0'
+//    currently not working
+//    implementation 'com.github.readium:r2-lcp-kotlin:0.1.0'
 
+//    uncomment this line to use with GitHu submodules and Android Studio Modules
 //    implementation project(':r2-shared')
 //    implementation project(':r2-lcp')
 
