--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -26,7 +26,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 //    uncomment this line to use with jitpack
     implementation 'com.github.readium:r2-shared-kotlin:0.1.0'
@@ -39,7 +39,16 @@ dependencies {
     implementation 'joda-time:joda-time:2.9.9'
 
     implementation "org.jetbrains.anko:anko-sqlite:0.10.4"
+    implementation 'com.github.kittinunf.fuel:fuel:1.12.1' //for JVM
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.12.1' //for Android
     implementation 'nl.komponents.kovenant:kovenant:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-core:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-android:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-combine:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-jvm:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-functional:3.3.0'
+
+    implementation 'org.zeroturnaround:zt-zip:1.12'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
