--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -31,6 +31,14 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.github.kittinunf.fuel:fuel:1.12.1' //for JVM
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.12.1' //for Android
+    implementation 'nl.komponents.kovenant:kovenant:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-core:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-android:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-combine:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-jvm:3.3.0'
+    implementation 'nl.komponents.kovenant:kovenant-functional:3.3.0'
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.mockito:mockito-core:2.12.0"
