--- a/readium/shared/r2-shared/src/main/AndroidManifest.xml
+++ b/readium/shared/r2-shared/src/main/AndroidManifest.xml
@@ -1,2 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.readium.r2.shared" />
+    package="org.readium.r2.shared"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <application
+        android:allowBackup="false"
+        android:supportsRtl="true"
+        tools:replace="android:allowBackup"/>
+
+</manifest>
