minor adjustments for RTL support

--- a/readium/lcp/r2-lcp/src/main/AndroidManifest.xml
+++ b/readium/lcp/r2-lcp/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.readium.r2.lcp">
+    package="org.readium.r2.lcp"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.BLUETOOTH"/>
+
+    <application
+        android:allowBackup="false"
+        android:supportsRtl="true"
+        tools:replace="android:allowBackup"/>
 
 </manifest>
