--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'nl.komponents.kovenant:kovenant-combine:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-jvm:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-functional:3.3.0'
+    implementation 'joda-time:joda-time:2.9.9'
+
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.mockito:mockito-core:2.12.0"
