--- a/readium/opds/r2-opds/build.gradle
+++ b/readium/opds/r2-opds/build.gradle
@@ -27,6 +27,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'com.jakewharton.timber:timber:4.7.0'
 
 //    uncomment this line to use with jitpack
     implementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
