--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -14,6 +14,8 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.readium'
 
 android {
+    flavorDimensions "testapp"
+
     compileSdkVersion 27
     buildToolsVersion "27.0.3"
 
@@ -30,6 +32,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        intTestapp {
+            dimension "testapp"
+        }
+        intTestappWithLcp {
+            dimension "testapp"
+        }
+        devTestapp {
+            dimension "testapp"
+        }
+        devTestappWithLcp {
+            dimension "testapp"
+        }
+    }
 }
 
 dependencies {
@@ -37,19 +53,19 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'com.jakewharton.timber:timber:4.7.0'
 
-//    uncomment this line to use with jitpack
-    implementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
-//    implementation 'com.github.readium:r2-shared-kotlin:0.1.0'
+    intTestappImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
+    intTestappWithLcpImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
 
-//    uncomment this line to use with GitHu submodules and Android Studio Modules
-//    implementation project(':r2-shared')
+    devTestappImplementation project(':r2-shared')
+    devTestappWithLcpImplementation project(':r2-shared')
+
     implementation project(':liblcp')
 
     implementation 'joda-time:joda-time:2.9.9'
 
-    implementation "org.jetbrains.anko:anko-sqlite:0.10.4"
-    implementation 'com.github.kittinunf.fuel:fuel:1.14.0' //for JVM
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.14.0' //for Android
+    implementation "org.jetbrains.anko:anko-sqlite:0.10.5"
+    implementation 'com.github.kittinunf.fuel:fuel:1.15.0' //for JVM
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0' //for Android
 //    implementation 'com.github.kittinunf.fuel:fuel-livedata:1.12.1' //for LiveData support
 //    implementation 'com.github.kittinunf.fuel:fuel-rxjava:1.12.1' //for RxJava support
 //    implementation 'com.github.kittinunf.fuel:fuel-gson:1.12.1' //for Gson support
@@ -69,8 +85,4 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-
-}
-repositories {
-    mavenCentral()
 }
