--- a/readium/opds/r2-opds/build.gradle
+++ b/readium/opds/r2-opds/build.gradle
@@ -14,6 +14,8 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.readium'
 
 android {
+    flavorDimensions "testapp"
+
     compileSdkVersion 27
     buildToolsVersion "27.0.3"
 
@@ -30,7 +32,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    productFlavors {
+        intTestapp {
+            dimension "testapp"
+        }
+        intTestappWithLcp {
+            dimension "testapp"
+        }
+        devTestapp {
+            dimension "testapp"
+        }
+        devTestappWithLcp {
+            dimension "testapp"
+        }
+    }
 }
 
 dependencies {
@@ -38,18 +53,17 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'com.jakewharton.timber:timber:4.7.0'
 
-//    uncomment this line to use with jitpack
-    implementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
-//    implementation 'com.github.readium:r2-shared-kotlin:0.1.0'
+    intTestappImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
+    intTestappWithLcpImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
 
-//    uncomment this line to use with GitHu submodules and Android Studio Modules
-//    implementation project(':r2-shared')
+    devTestappImplementation project(':r2-shared')
+    devTestappWithLcpImplementation project(':r2-shared')
 
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'nl.komponents.kovenant:kovenant:3.3.0'
     implementation 'joda-time:joda-time:2.9.9'
-    implementation 'com.github.kittinunf.fuel:fuel:1.12.1' //for JVM
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.12.1' //for Android
+    implementation 'com.github.kittinunf.fuel:fuel:1.15.0' //for JVM
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0' //for Android
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
