--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -14,9 +14,10 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.readium'
 
 android {
+    flavorDimensions "testapp"
+
     compileSdkVersion 27
     buildToolsVersion "27.0.3"
-
 
     defaultConfig {
         minSdkVersion 21
@@ -31,6 +32,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        intTestapp {
+            dimension "testapp"
+        }
+        intTestappWithLcp {
+            dimension "testapp"
+        }
+        devTestapp {
+            dimension "testapp"
+        }
+        devTestappWithLcp {
+            dimension "testapp"
+        }
+    }
 }
 
 dependencies {
@@ -40,8 +55,8 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.github.kittinunf.fuel:fuel:1.12.1' //for JVM
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.12.1' //for Android
+    implementation 'com.github.kittinunf.fuel:fuel:1.15.0' //for JVM
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0' //for Android
     implementation 'nl.komponents.kovenant:kovenant:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-core:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-android:3.3.0'
@@ -50,11 +65,9 @@ dependencies {
     implementation 'nl.komponents.kovenant:kovenant-functional:3.3.0'
     implementation 'joda-time:joda-time:2.9.9'
 
-
     testImplementation 'junit:junit:4.12'
     testImplementation "org.mockito:mockito-core:2.12.0"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-
 }
