--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -49,6 +49,9 @@ android {
 
     // default build flavour
     defaultPublishConfig "intTestapp"
+    // true to publish all flavour artifacts
+    publishNonDefault false
+
 }
 
 // Publish default flavour as main artifact, otherwise the maven pom is not generated
