adding debug to the default config

--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -48,7 +48,7 @@ android {
     }
 
     // default build flavour
-    defaultPublishConfig "intTestapp"
+    defaultPublishConfig "intTestappDebug"
 
 }
 
