--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -17,7 +17,6 @@ android {
     flavorDimensions "testapp"
 
     compileSdkVersion 27
-    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 21
@@ -54,7 +53,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.jakewharton.timber:timber:4.7.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     intTestappImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
     intTestappWithLcpImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
@@ -63,23 +62,20 @@ dependencies {
         devTestappImplementation project(':r2-shared')
         devTestappWithLcpImplementation project(':r2-shared')
     }
-    intTestappImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
-    intTestappWithLcpImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
-
 
     implementation project(':liblcp')
 
+
+
     implementation 'joda-time:joda-time:2.9.9'
-
-    implementation "org.jetbrains.anko:anko-sqlite:0.10.5"
-    implementation 'com.github.kittinunf.fuel:fuel:1.15.0' //for JVM
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0' //for Android
-//    implementation 'com.github.kittinunf.fuel:fuel-livedata:1.12.1' //for LiveData support
-//    implementation 'com.github.kittinunf.fuel:fuel-rxjava:1.12.1' //for RxJava support
-//    implementation 'com.github.kittinunf.fuel:fuel-gson:1.12.1' //for Gson support
-//    implementation 'com.github.kittinunf.fuel:fuel-jackson:1.12.1' //for Jackson support
-//    implementation 'com.github.kittinunf.fuel:fuel-moshi:1.12.1' //for Moshi support
-
+    implementation 'org.jetbrains.anko:anko-sqlite:0.10.5'
+    implementation 'com.github.kittinunf.fuel:fuel:1.15.0'
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0'
+    //    implementation 'com.github.kittinunf.fuel:fuel-livedata:1.12.1' //for LiveData support
+    //    implementation 'com.github.kittinunf.fuel:fuel-rxjava:1.12.1' //for RxJava support
+    //    implementation 'com.github.kittinunf.fuel:fuel-gson:1.12.1' //for Gson support
+    //    implementation 'com.github.kittinunf.fuel:fuel-jackson:1.12.1' //for Jackson support
+    //    implementation 'com.github.kittinunf.fuel:fuel-moshi:1.12.1' //for Moshi support
     implementation 'nl.komponents.kovenant:kovenant:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-core:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-android:3.3.0'
