--- a/readium/opds/r2-opds/build.gradle
+++ b/readium/opds/r2-opds/build.gradle
@@ -17,8 +17,6 @@ android {
     flavorDimensions "testapp"
 
     compileSdkVersion 27
-    buildToolsVersion "27.0.3"
-
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 27
@@ -52,23 +50,20 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.jakewharton.timber:timber:4.7.0'
-
+    implementation 'com.jakewharton.timber:timber:4.7.1'
     if (findProject(':r2-shared')) {
         devTestappImplementation project(':r2-shared')
         devTestappWithLcpImplementation project(':r2-shared')
     }
     intTestappImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
     intTestappWithLcpImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
-
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation "com.android.support:appcompat-v7:$support_version"
     implementation 'nl.komponents.kovenant:kovenant:3.3.0'
     implementation 'joda-time:joda-time:2.9.9'
-    implementation 'com.github.kittinunf.fuel:fuel:1.15.0' //for JVM
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0' //for Android
-
+    implementation 'com.github.kittinunf.fuel:fuel:1.15.0'
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
