--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -17,8 +17,6 @@ android {
     flavorDimensions "testapp"
 
     compileSdkVersion 27
-    buildToolsVersion "27.0.3"
-
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 27
@@ -52,14 +50,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.jakewharton.timber:timber:4.7.0'
-
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation "com.android.support:appcompat-v7:$support_version"
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.github.kittinunf.fuel:fuel:1.15.0' //for JVM
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0' //for Android
+    implementation 'com.github.kittinunf.fuel:fuel:1.15.0'
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0'
     implementation 'nl.komponents.kovenant:kovenant:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-core:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-android:3.3.0'
@@ -67,9 +64,8 @@ dependencies {
     implementation 'nl.komponents.kovenant:kovenant-jvm:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-functional:3.3.0'
     implementation 'joda-time:joda-time:2.9.9'
-
     testImplementation 'junit:junit:4.12'
-    testImplementation "org.mockito:mockito-core:2.12.0"
+    testImplementation 'org.mockito:mockito-core:2.12.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
