--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -68,9 +68,11 @@ dependencies {
 
 
     implementation 'joda-time:joda-time:2.9.9'
-    implementation 'org.jetbrains.anko:anko-sqlite:0.10.5'
-    implementation 'com.github.kittinunf.fuel:fuel:1.15.0'
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0'
+    implementation 'org.jetbrains.anko:anko-sqlite:0.10.8'
+    implementation 'com.github.kittinunf.fuel:fuel:1.16.0'
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.16.0'
+    implementation 'com.github.kittinunf.fuel:fuel-coroutines:1.16.0'
+
     //    implementation 'com.github.kittinunf.fuel:fuel-livedata:1.12.1' //for LiveData support
     //    implementation 'com.github.kittinunf.fuel:fuel-rxjava:1.12.1' //for RxJava support
     //    implementation 'com.github.kittinunf.fuel:fuel-gson:1.12.1' //for Gson support
