--- a/readium/opds/r2-opds/build.gradle
+++ b/readium/opds/r2-opds/build.gradle
@@ -57,8 +57,8 @@ dependencies {
         devTestappImplementation project(':r2-shared')
         devTestappWithLcpImplementation project(':r2-shared')
     }
-    intTestappImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
-    intTestappWithLcpImplementation 'com.github.readium:r2-shared-kotlin:develop-SNAPSHOT'
+    intTestappImplementation "com.github.readium:r2-shared-kotlin:$r2branch-SNAPSHOT"
+    intTestappWithLcpImplementation "com.github.readium:r2-shared-kotlin:$r2branch-SNAPSHOT"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation 'nl.komponents.kovenant:kovenant:3.3.0'
     implementation 'joda-time:joda-time:2.9.9'
