--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -65,6 +65,12 @@ dependencies {
 
     implementation project(':liblcp')
 
+    implementation('com.mcxiaoke.koi:core:0.5.5') {
+        exclude module: 'support-v4'
+    }
+    implementation('com.mcxiaoke.koi:async:0.5.5') {
+        exclude module: 'support-v4'
+    }
 
 
     implementation 'joda-time:joda-time:2.9.9'
