--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -20,9 +20,11 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+    }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
     buildTypes {
         release {
