--- a/readium/opds/r2-opds/build.gradle
+++ b/readium/opds/r2-opds/build.gradle
@@ -22,7 +22,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
     buildTypes {
         release {
             minifyEnabled false
