replace lcp lib project with gradle dependency

--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -45,7 +45,7 @@ dependencies {
         implementation "com.github.readium:r2-shared-kotlin:1.1.4"
     }
 
-    implementation project(':liblcp')
+    implementation "readium:liblcp:1.0.0@aar"
 
     implementation('com.mcxiaoke.koi:core:0.5.5') {
         exclude module: 'support-v4'
