--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -51,13 +51,16 @@ dependencies {
     implementation 'nl.komponents.kovenant:kovenant-functional:3.3.0'
     implementation 'joda-time:joda-time:2.9.9'
 
+    testImplementation "androidx.test:core-ktx:1.2.0"
+    testImplementation "androidx.test.ext:junit-ktx:1.1.1"
+    testImplementation "junit:junit:4.12"
+    testImplementation "net.sf.kxml:kxml2:2.3.0"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.19.0'
-    testImplementation 'xmlpull:xmlpull:1.1.3.1'
-    testImplementation 'net.sf.kxml:kxml2:2.3.0'
-    testImplementation 'org.json:json:20190722'
-    
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "org.json:json:20190722"
+    testImplementation "org.mockito:mockito-core:2.19.0"
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "xmlpull:xmlpull:1.1.3.1"
+
+    androidTestImplementation "androidx.test:runner:1.2.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
 }
