--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -57,9 +57,7 @@ dependencies {
 
     implementation 'joda-time:joda-time:2.9.9'
     implementation 'org.jetbrains.anko:anko-sqlite:0.10.8'
-    implementation 'com.github.kittinunf.fuel:fuel:1.16.0'
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.16.0'
-    implementation 'com.github.kittinunf.fuel:fuel-coroutines:1.16.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6'
 
     implementation 'nl.komponents.kovenant:kovenant:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-core:3.3.0'
