--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     testImplementation "junit:junit:4.12"
     testImplementation "net.sf.kxml:kxml2:2.3.0"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-reflect"
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.14.0'
