--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation "androidx.appcompat:appcompat:1.2.0-beta01"
     implementation 'com.google.code.gson:gson:2.8.5'
