--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -15,13 +15,11 @@ group='com.github.readium'
 
 android {
 
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
-
+        targetSdkVersion 30
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
     }
     compileOptions {
         sourceCompatibility 1.8
@@ -43,30 +41,30 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
     implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation "androidx.appcompat:appcompat:1.2.0-beta01"
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.github.kittinunf.fuel:fuel:1.16.0'
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.16.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.github.kittinunf.fuel:fuel:2.2.2'
+    implementation 'com.github.kittinunf.fuel:fuel-android:2.2.2'
     implementation 'nl.komponents.kovenant:kovenant:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-core:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-android:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-combine:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-jvm:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-functional:3.3.0'
-    implementation 'joda-time:joda-time:2.9.9'
+    implementation 'joda-time:joda-time:2.10.5'
 
     testImplementation "androidx.test:core-ktx:1.2.0"
     testImplementation "androidx.test.ext:junit-ktx:1.1.1"
-    testImplementation "junit:junit:4.12"
+    testImplementation 'junit:junit:4.13'
     testImplementation "net.sf.kxml:kxml2:2.3.0"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation "org.robolectric:robolectric:4.3.1"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.assertj:assertj-core:3.14.0'
-    testImplementation 'org.mockito:mockito-core:2.19.0'
+    testImplementation 'junit:junit:4.13'
+    testImplementation 'org.assertj:assertj-core:3.16.1'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
     testImplementation 'xmlpull:xmlpull:1.1.3.1'
     testImplementation 'net.sf.kxml:kxml2:2.3.0'
-    testImplementation 'org.json:json:20190722'
+    testImplementation 'org.json:json:20200518'
     
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
