--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -25,6 +25,9 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -55,6 +58,9 @@ dependencies {
     implementation 'joda-time:joda-time:2.10.5'
     implementation 'org.jetbrains.anko:anko-sqlite:0.10.8'
     implementation 'org.zeroturnaround:zt-zip:1.14'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 
     testImplementation 'junit:junit:4.13'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
