--- a/readium/opds/r2-opds/build.gradle
+++ b/readium/opds/r2-opds/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     if (findProject(':r2-shared')) {
         implementation project(':r2-shared')
     } else {
-        implementation "com.github.readium:r2-shared-kotlin:2.0.0-alpha.2"
+        implementation "com.github.readium:r2-shared-kotlin:2.0.0-beta.1"
     }
 
     implementation "androidx.appcompat:appcompat:1.3.0-alpha02"
