--- a/readium/lcp/build.gradle
+++ b/readium/lcp/build.gradle
@@ -12,8 +12,6 @@ plugins {
     id 'maven-publish'
 }
 
-group='com.github.readium'
-
 android {
 
     compileSdkVersion 31
@@ -44,6 +42,9 @@ afterEvaluate {
         publications {
             release(MavenPublication) {
                 from components.release
+
+                groupId = 'com.github.readium'
+                artifactId = 'readium-lcp'
             }
         }
     }
@@ -53,12 +54,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
 
-    if (findProject(':r2-shared')) {
-        implementation project(':r2-shared')
-    } else {
-        implementation "com.github.readium:r2-shared-kotlin:2.1.0"
-    }
-
+    api project(':readium:shared')
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.core:core-ktx:1.6.0'
