--- a/readium/navigator/build.gradle
+++ b/readium/navigator/build.gradle
@@ -11,8 +11,6 @@ plugins {
     id 'maven-publish'
 }
 
-group='com.github.readium'
-
 android {
     // FIXME: This doesn't pass the lint because some resources don't start with r2_ yet. We need to rename all resources for the next major version.
 //    resourcePrefix "r2_"
@@ -48,6 +46,9 @@ afterEvaluate {
         publications {
             release(MavenPublication) {
                 from components.release
+
+                groupId = 'com.github.readium'
+                artifactId = 'readium-navigator'
             }
         }
     }
@@ -56,11 +57,7 @@ afterEvaluate {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    if (findProject(':r2-shared')) {
-        implementation project(':r2-shared')
-    } else {
-        implementation "com.github.readium:r2-shared-kotlin:2.1.0"
-    }
+    api project(':readium:shared')
 
     implementation 'androidx.activity:activity-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.3.1'
