--- a/readium/opds/build.gradle
+++ b/readium/opds/build.gradle
@@ -11,8 +11,6 @@ plugins {
     id 'maven-publish'
 }
 
-group='com.github.readium'
-
 android {
     compileSdkVersion 31
     defaultConfig {
@@ -40,6 +38,8 @@ afterEvaluate {
         publications {
             release(MavenPublication) {
                 from components.release
+                groupId = 'com.github.readium'
+                artifactId = 'readium-opds'
             }
         }
     }
@@ -48,11 +48,7 @@ afterEvaluate {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    if (findProject(':r2-shared')) {
-        implementation project(':r2-shared')
-    } else {
-        implementation "com.github.readium:r2-shared-kotlin:2.1.0"
-    }
+    api project(':readium:shared')
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation "com.jakewharton.timber:timber:4.7.1"
