--- a/readium/streamer/build.gradle
+++ b/readium/streamer/build.gradle
@@ -11,8 +11,6 @@ plugins {
     id 'maven-publish'
 }
 
-group='com.github.readium'
-
 android {
     compileSdkVersion 31
     defaultConfig {
@@ -44,6 +42,9 @@ afterEvaluate {
         publications {
             release(MavenPublication) {
                 from components.release
+
+                groupId = 'com.github.readium'
+                artifactId = 'readium-streamer'
             }
         }
     }
@@ -52,11 +53,7 @@ afterEvaluate {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    if (findProject(':r2-shared')) {
-        implementation project(':r2-shared')
-    } else {
-        implementation "com.github.readium:r2-shared-kotlin:2.1.0"
-    }
+    api project(':readium:shared')
 
     final JACKSON_VERSION = '2.12.2'
     implementation 'androidx.appcompat:appcompat:1.3.1'
