--- a/test-app/build.gradle
+++ b/test-app/build.gradle
@@ -1,19 +1,13 @@
 /*
- * Module: r2-testapp-kotlin
- * Developers: Aferdita Muriqi, Clément Baumann
- *
- * Copyright (c) 2018. European Digital Reading Lab. All rights reserved.
- * Licensed to the Readium Foundation under one or more contributor license agreements.
- * Use of this source code is governed by a BSD-style license which is detailed in the
- * LICENSE file present in the project repository where this source code is maintained.
+ * Copyright 2021 Readium Foundation. All rights reserved.
+ * Use of this source code is governed by the BSD-style license
+ * available in the top-level LICENSE file of the project.
  */
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-parcelize'
-group = 'com.github.readium'
-
 
 int major = 2
 int minor = 2
@@ -84,32 +78,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    final READIUM_VERSION = '2.1.0'
-    if (findProject(':r2-shared')) {
-        implementation project(':r2-shared')
-    } else {
-        implementation "com.github.readium:r2-shared-kotlin:$READIUM_VERSION"
-    }
-    if (findProject(':r2-navigator')) {
-        implementation project(':r2-navigator')
-    } else {
-        implementation "com.github.readium:r2-navigator-kotlin:$READIUM_VERSION"
-    }
-    if (findProject(':r2-streamer')) {
-        implementation project(':r2-streamer')
-    } else {
-        implementation "com.github.readium:r2-streamer-kotlin:$READIUM_VERSION"
-    }
-    if (findProject(':r2-opds')) {
-        implementation project(':r2-opds')
-    } else {
-        implementation "com.github.readium:r2-opds-kotlin:$READIUM_VERSION"
-    }
-    if (findProject(':r2-lcp')) {
-        implementation project(':r2-lcp')
-    } else {
-        implementation "com.github.readium:r2-lcp-kotlin:$READIUM_VERSION"
-    }
+    implementation project(':readium:shared')
+    implementation project(':readium:streamer')
+    implementation project(':readium:navigator')
+    implementation project(':readium:opds')
+    implementation project(':readium:lcp')
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation "androidx.activity:activity-ktx:1.3.1"
