--- a/.github/workflows/streamer.yml
+++ b/.github/workflows/streamer.yml
@@ -1,5 +1,9 @@
 name: Streamer
-on: [ push, pull_request ]
+
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
 
 jobs:
   build:
@@ -9,6 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          lfs: 'true'
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
