--- a/test-app/.github/workflows/build.yml
+++ b/test-app/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          lfs: 'true'
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
