Optimize GitHub workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Navigator
+name: Checks
 
 on:
   push:
@@ -21,9 +21,9 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build
-        run: ./gradlew clean :readium:navigator:build -x test
+        run: ./gradlew clean build -x test
       - name: Test
-        run: ./gradlew :readium:navigator:test --continue
+        run: ./gradlew test --continue
 
   lint:
     name: Lint
@@ -37,8 +37,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          lfs: 'true'
       - name: Install dependencies
         run: npm install --prefix "$scripts"
       - name: Lint JavaScript
