--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,9 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
+# Additional IntelliJ files
+.idea/misc.xml
+.idea/deploymentTargetDropDown.xml
 
 # Keystore files
 *.jks
