--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -41,9 +41,8 @@ jobs:
         run: yarn --cwd "$scripts" run lint
       - name: Check JavaScript formatting
         run: yarn --cwd "$scripts" run checkformat
-      # FIXME: This suddenly stopped working even though the toolchain versions seem identical.
-      # - name: Check if bundled scripts are up-to-date
-      #   run: |
-      #       make scripts
-      #       git diff --exit-code --name-only src/main/assets/readium/scripts/*.js
+      - name: Check if bundled scripts are up-to-date
+        run: |
+            make scripts
+            git diff --exit-code --name-only src/main/assets/readium/scripts
 
