--- a/readium/navigator/build.gradle
+++ b/readium/navigator/build.gradle
@@ -79,6 +79,12 @@ dependencies {
     implementation 'androidx.work:work-runtime-ktx:2.7.0'
     implementation "com.duolingo.open:rtl-viewpager:1.0.3"
     api "com.github.barteksc:android-pdf-viewer:3.1.0-beta.1"
+    // PdfiumAndroid 1.9.0 conflicts with liblcp, see https://github.com/readium/kotlin-toolkit/issues/29
+    // AndroidPdfViewer 3.1.0 imports it, so we need to force the downgrade.
+    //noinspection GradleDependency
+    implementation("com.github.barteksc:pdfium-android:1.8.2") {
+        force = true
+    }
     // ChrisBane/PhotoView ( for the Zoom handling )
     implementation "com.github.chrisbanes:PhotoView:2.3.0"
     // ExoPlayer is used by the Audio Navigator.
