Attempt to implement a navigator with Compose

--- a/test-app/build.gradle
+++ b/test-app/build.gradle
@@ -51,7 +51,12 @@ android {
         freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
     }
     buildFeatures {
+        compose true
         viewBinding true
+    }
+    composeOptions {
+        kotlinCompilerVersion rootProject.kotlin_version
+        kotlinCompilerExtensionVersion rootProject.compose_version
     }
     buildTypes {
         release {
@@ -93,11 +98,17 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation "androidx.paging:paging-runtime-ktx:3.0.1"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+
     implementation "androidx.webkit:webkit:1.4.0"
     //noinspection GradleDependency
     implementation ("com.github.edrlab.nanohttpd:nanohttpd:master-SNAPSHOT") {
