--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@
 buildscript {
     ext.kotlin_version = '1.5.31'
     ext.dokka_version = '1.5.30'
+    ext.compose_version = '1.0.5'
 
     repositories {
         google()
