--- a/readium/navigator/build.gradle
+++ b/readium/navigator/build.gradle
@@ -38,6 +38,11 @@ android {
     }
     buildFeatures {
         viewBinding true
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerVersion rootProject.kotlin_version
+        kotlinCompilerExtensionVersion rootProject.compose_version
     }
 }
 
@@ -86,6 +91,10 @@ dependencies {
     api "com.google.android.exoplayer:exoplayer-ui:2.15.0"
     api "com.google.android.exoplayer:extension-mediasession:2.15.0"
     api "com.google.android.exoplayer:extension-workmanager:2.15.0"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'com.google.android.material:material:1.4.0'
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation "com.shopgun.android:utils:1.0.9"
