Extract exoplayer and androidx-media adapters

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,8 @@ include 'readium:navigator:navigator-core'
 include 'readium:opds'
 include 'readium:lcp'
 
+include 'readium:adapters:androidx-media'
+include 'readium:adapters:exoplayer'
 include 'readium:adapters:nanohttpd'
 include 'readium:adapters:pdfium'
 include 'readium:adapters:pdfium:pdfium-document'
