--- a/test-app/src/main/AndroidManifest.xml
+++ b/test-app/src/main/AndroidManifest.xml
@@ -193,7 +193,7 @@
             android:name=".reader.VisualReaderActivity"
             android:label="Reader" />
 
-        <service android:name=".reader.AudiobookService"
+        <!--*<service android:name=".reader.AudiobookService"
             android:enabled="true"
             android:exported="true"
             android:stopWithTask="true"
@@ -202,7 +202,19 @@
             <intent-filter>
                 <action android:name="android.media.browse.MediaBrowserService" />
             </intent-filter>
+        </service>-->
+
+        <service android:name=".MediaService"
+            android:enabled="true"
+            android:exported="true"
+            tools:ignore="ExportedService">
+
+            <intent-filter>
+                <action android:name="androidx.media2.session.MediaSessionService" />
+            </intent-filter>
         </service>
+
+
     </application>
 
 </manifest>
