Add a guide to add custom fonts

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
   - Migration Guide: migration-guide.md
   - User Guides:
     - Navigator settings: guides/navigator-settings.md
+      - Adding custom fonts: guides/epub-custom-fonts.md
     - PDF support: guides/pdf.md
     - Text-to-speech: guides/tts.md
     - Extracting the content of a publication: guides/content.md
